# statsized

./: .gitignore  Makefile  README.md  pyproject.toml
mock_source/: mock_server.py
mock_source/data/: landing-2024190004.json  play-by-play-2024190004.json  shiftcharts-2024190004.json
proto/: statsized.proto
statsized/: main.py  statsized_pb2.py  statsized_pb2_grpc.py
statsized/data/: parser.py  stores.py  tracker.py
statsized/grpc_server/: server.py
statsized/utils/: error.py  logger.py  metrics.py
tests/: common.py  test_all.py
